--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,25 +1,51 @@
 @import 'tailwindcss';
 
 @theme {
+  --color-primary: #555555;
+}
+
+@layer base {
+  button {
+    cursor: pointer;
+  }
 }
 
 @layer utilities {
-  @keyframes animloader {
-    0% {
-      box-shadow: -38px -12px, -14px 0, 14px 0, 38px 0;
-    }
-    33% {
-      box-shadow: -38px 0, -14px -12px, 14px 0, 38px 0;
-    }
-    66% {
-      box-shadow: -38px 0, -14px 0, 14px -12px, 38px 0;
-    }
-    100% {
-      box-shadow: -38px 0, -14px 0, 14px 0, 38px -12px;
-    }
+}
+
+@layer components {
+  .social-btn {
+    width: 100%;
+    border: 1px solid black;
+    padding-left: 10;
+    padding-right: 10;
+    padding-top: 8;
+    padding-bottom: 8;
+    border-radius: 10px;
   }
 
-  .animate-animloader {
-    animation: animloader 1s linear infinite alternate;
+  .modal-btn {
+    border: 1px solid black;
+    padding: 2px 10px;
+    border-radius: 10px;
   }
+}
+
+@keyframes animloader {
+  0% {
+    box-shadow: -38px -12px, -14px 0, 14px 0, 38px 0;
+  }
+  33% {
+    box-shadow: -38px 0, -14px -12px, 14px 0, 38px 0;
+  }
+  66% {
+    box-shadow: -38px 0, -14px 0, 14px -12px, 38px 0;
+  }
+  100% {
+    box-shadow: -38px 0, -14px 0, 14px 0, 38px -12px;
+  }
+}
+
+.animate-animloader {
+  animation: animloader 1s linear infinite alternate;
 }
