feat: 스크롤 유틸리티 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,10 @@
   .transition-width {
     transition-property: width;
   }
+
+  .scrollbar-stable {
+    scrollbar-gutter: stable;
+  }
 }
 
 @layer components {
