feat: 스크롤바 커스텀

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,10 +32,8 @@
     border-radius: 10px;
   }
 
-  .modal-btn {
-    border: 1px solid black;
-    padding: 2px 10px;
-    border-radius: 10px;
+  .basic-btn {
+    @apply border border-black px-[10px] py-[2px] rounded-[4px];
   }
 }
 
@@ -56,4 +54,17 @@
 
 .animate-animloader {
   animation: animloader 1s linear infinite alternate;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.3);
 }
