fix: globals.css 수정, toast 애니메이션 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,25 +19,23 @@
   .scrollbar-stable {
     scrollbar-gutter: stable;
   }
+
+  .upload-loading {
+    animation: upload-loading 1s linear infinite alternate;
+  }
+
+  .toast {
+    animation: toast 0.3s forwards;
+  }
 }
 
 @layer components {
-  .social-btn {
-    width: 100%;
-    border: 1px solid black;
-    padding-left: 10;
-    padding-right: 10;
-    padding-top: 8;
-    padding-bottom: 8;
-    border-radius: 10px;
-  }
-
   .basic-btn {
-    @apply border border-black px-[10px] py-[2px] rounded-[4px];
+    @apply border border-black px-[10px] rounded-[4px];
   }
 }
 
-@keyframes animloader {
+@keyframes upload-loading {
   0% {
     box-shadow: -38px -12px, -14px 0, 14px 0, 38px 0;
   }
@@ -52,8 +50,23 @@
   }
 }
 
-.animate-animloader {
-  animation: animloader 1s linear infinite alternate;
+@keyframes toast {
+  0% {
+    transform: translateY(30px);
+    opacity: 0.1;
+  }
+  33% {
+    transform: translateY(20px);
+    opacity: 0.3;
+  }
+  66% {
+    transform: translateY(10px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 ::-webkit-scrollbar {
