fix: globals css 모바일 스크롤바, 버튼 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,15 +31,15 @@
 
 @layer components {
   .basic-btn {
-    @apply border border-gray-300 px-[12px] py-[2px] rounded-[6px] hover:bg-gray-100 shadow-gray-200 shadow-md;
+    @apply border border-gray-300 px-[12px] py-[2px] rounded-[6px] hover:bg-gray-100 shadow-gray-200 shadow-md whitespace-nowrap;
   }
 
   .basic-red-btn {
-    @apply border border-red-500 bg-red-500 text-white px-[12px] py-[2px] rounded-[6px] hover:bg-red-400 hover:border-red-400 shadow-red-200 shadow-md;
+    @apply border border-red-500 bg-red-500 text-white px-[12px] py-[2px] rounded-[6px] hover:bg-red-400 hover:border-red-400 shadow-red-200 shadow-md whitespace-nowrap;
   }
 
   .blue-btn {
-    @apply border border-blue-500 bg-blue-500 text-white px-[12px] py-[3px] rounded-[6px] hover:bg-blue-400 hover:border-blue-400 shadow-blue-200 shadow-md;
+    @apply border border-blue-500 bg-blue-500 text-white px-[12px] py-[3px] rounded-[6px] hover:bg-blue-400 hover:border-blue-400 shadow-blue-200 shadow-md whitespace-nowrap;
   }
 }
 
@@ -88,4 +88,10 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 4px;
+  }
 }
